# reel-driver

./: .environments.yaml  .gitignore  .gitlab-ci.yml  README.md  binomial_classifer_analysis.py  binomial_classifier.py  docker-compose.training.yaml  etl.py  experimental-design.md  hyper_search_results.json  predict.py  pyproject.toml  pyproject.toml.bak  readme.md  requirements.in  requirements.out  requirements.txt  rerun_metadata_collection.py  training.py
.error_handling/: _00_error_correction.py
.github/workflows/: docker-build-api.yaml  test.yaml  training-docker-build.yaml
app/: docker-compose.yaml  dockerfile  dockerfile.api  main.py  readme.md  requirements.in  requirements.txt
app/core/: config.py
app/models/: api.py  media_prediction_input.py
app/routers/: prediction.py
app/services/: mlflow_client.py  predictor.py
config/: production_companies.yaml
containerization/: dockerfile.api  dockerfile.base_training  dockerfile.base_training_gpu  dockerfile.feature_engineering  dockerfile.feature_engineering_cpu  dockerfile.feature_engineering_gpu  dockerfile.hyperparameter_optimization  dockerfile.model_training  dockerfile.model_training_cpu  dockerfile.model_training_gpu
data/: 01_training.parquet  02_binomial_classifier_training_data.parquet  03_binomial_classifier_results.parquet  binomial_classifier_results.parquet  binomial_classifier_training_data.parquet  false_negatives.json  false_positives.json  linear_regression_training_data.parquet  media.parquet
data_models/: training_data_frame.py
docs/: CPU-v-GPU.md
model_artifacts/: normalization.json  xgb_model.json
notebooks/: 01_feature_selection.ipynb  03_binomial_classifier_analysis.ipynb  binomial_classifier_analysis.ipynb
scripts/: _00_error_correction.py  _00_prepare_training_data.py  _01_binomial_classifier.py  _02_binomial_classifier.py  binomial_classifier.py  extract_media_table.py  linear_regression_build_model.py  linear_regression_prep_data.py  xgb_binomial_classifier_prep_data.py
sql/: instantiate_prediction.sql  instantiate_rda_view.sql
src/: _00_error_correction.py  _01_extract_media_table.py  _02_xgb_binomial_classifier_prep_data.py  _03_xgb_binomial_classifier_build_model.py  __init__.py  readme.md  training.py
tests/: README.md  conftest.py  pytest.ini  test_api_endpoints.sh
(+29 files in other folders)
